tests/syntactic/sourceloc2/sourceloc2.err
Error: syntax error, unexpected . in file sourceloc2.dl at line 1
 .bad
-^----
1 errors generated, evaluation aborted
